# Integuru-fork

./: .gitignore  README.md  create_har.py  create_har_copy.py  create_har_copy_latest.py  main.ipynb  pyproject.toml
.github/workflows/: ci.yml
integuru/: __main__.py  agent.py  graph_builder.py
integuru/models/: DAGManager.py
tests/: test_integration_agent.py
